--- a/app/src/main/res/drawable/roundedstroke.xml
+++ b/app/src/main/res/drawable/roundedstroke.xml
@@ -16,8 +16,7 @@
 
     <!-- Background color -->
     <stroke
-        android:width="1dp"
-        android:color="@color/grey_600" />
+        android:width="1dp" />
     <solid android:color="@color/white" />
 
 </shape>
