--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/container">
+    android:background="?attr/backgroundcolor"
+      android:id="@+id/container">
 
 
     <FrameLayout
-            android:fitsSystemWindows="true"
-            android:layout_above="@id/navigation"
+             android:layout_above="@id/navigation"
             android:id="@+id/frame"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
@@ -16,13 +16,13 @@
     <android.support.design.widget.BottomNavigationView
         android:elevation="0dp"
         app:elevation="0dp"
+        app:itemTextColor="?attr/textcolor"
+        android:background="?attr/backgroundcolor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/white"
-        app:itemTextColor="@color/black"
-        android:id="@+id/navigation"
-        app:menu="@menu/navigation">
+         android:id="@+id/navigation"
+         app:menu="@menu/navigation">
 
 
     </android.support.design.widget.BottomNavigationView>
@@ -35,7 +35,7 @@
         android:layout_alignParentBottom="true"
         android:background="@color/white"
         android:src="@drawable/ic_add_black_24dp"
-        app:backgroundTint="@color/white"
+        app:backgroundTint="?attr/backgroundcolor"
         app:borderWidth="2dp"
         app:rippleColor="@color/colorPrimaryDark"
         app:useCompatPadding="true"
@@ -48,7 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
     <LinearLayout
-        android:background="@color/white"
+        android:background="?attr/backgroundcolor"
         android:visibility="gone"
         android:id="@+id/offline"
         android:layout_centerInParent="true"
@@ -62,7 +62,7 @@
             android:fontFamily="@font/roboto_regular"
             android:text="..."
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textColor="?attr/textcolor"
             android:textSize="24sp" />
         <Button
             android:padding="15dp"
@@ -74,6 +74,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <ImageView
+
             android:id="@+id/offlineimage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
