--- a/app/src/main/res/layout/fonts.xml
+++ b/app/src/main/res/layout/fonts.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
     android:id="@+id/layout"
-     android:elevation="3dp"
+     android:elevation="10dp"
     app:cardCornerRadius="0dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="?attr/backgroundcolor"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
-        android:background="@drawable/bottom_line"
-        android:padding="2dp"
+         android:padding="2dp"
         android:layout_margin="10dp"
          android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
             android:textAlignment="center"
-             android:textColor="@color/black"
+             android:textColor="?attr/textcolor"
             android:layout_gravity="center"
             android:id="@+id/fonttest"
             android:layout_width="wrap_content"
