--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:id="@+id/home"
-    android:background="@color/transparent"
+    android:background="?attr/backgroundcolor"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragments.HomeFragment">
@@ -12,17 +12,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:orientation="vertical">
 
         <android.support.v7.widget.Toolbar
+            style="@style/AppTheme"
             android:id="@+id/toolbar"
+            app:titleTextColor="?attr/titlecolor"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:elevation="1dp"
-            android:textAlignment="center"
-            app:title="@string/app_name"
-            app:titleTextColor="@color/colorPrimaryDark" />
+            android:layout_height="wrap_content"
+            android:elevation="3dp"
+             app:title="@string/app_name" />
 
         <android.support.v7.widget.CardView
             android:layout_width="wrap_content"
@@ -37,7 +36,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 ads:adSize="BANNER"
-                ads:adUnitId="ca-app-pub-4979584089010597/3019321601"></com.google.android.gms.ads.AdView>
+                ads:adUnitId="ca-app-pub-4979584089010597/3019321601" />
 
         </android.support.v7.widget.CardView>
 
@@ -49,6 +48,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:visibility="gone"
         android:orientation="vertical"
         android:id="@+id/loading"
         android:layout_width="match_parent"
