--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -2,9 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?attr/backgroundcolor"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/transparent"
-    android:orientation="vertical">
+     android:orientation="vertical">
     <android.support.v7.widget.Toolbar
         android:layout_margin="10dp"
         android:background="@color/transparent"
@@ -24,7 +24,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/round"
-                android:backgroundTint="@color/grey_200"
+                android:backgroundTint="?attr/hintcolor"
                 android:focusedByDefault="true"
                 app:defaultQueryHint="Busque o que seu coração quiser..."
                 app:iconifiedByDefault="false"
@@ -33,13 +33,13 @@
             <android.support.design.widget.TabLayout
                 android:layout_height="wrap_content"
                 android:layout_margin="1dp"
-                app:tabIndicatorColor="@color/colorPrimary"
+                app:tabIndicatorColor="?attr/titlecolor"
                 app:tabMode="scrollable"
                 app:tabIndicatorHeight="2dp"
-                app:tabSelectedTextColor="@color/colorPrimaryDark"
+                app:tabSelectedTextColor="?attr/textcolor"
                 android:id="@+id/searchoptions"
                 android:layout_width="match_parent"
-                app:tabTextColor="@color/lblack">
+                app:tabTextColor="?attr/hintcolor">
 
                 <android.support.design.widget.TabItem
                     android:layout_width="wrap_content"
@@ -87,6 +87,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
         <ImageView
+            android:tint="?attr/textcolor"
             android:id="@+id/icon"
             android:layout_width="150dp"
             android:layout_height="150dp"
