--- a/app/src/main/res/layout/politics.xml
+++ b/app/src/main/res/layout/politics.xml
@@ -7,7 +7,7 @@
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/round">
+        android:background="?attr/backgroundcolor">
 
         <LinearLayout
             android:layout_width="match_parent"
