--- a/app/src/main/res/layout/references.xml
+++ b/app/src/main/res/layout/references.xml
@@ -3,9 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:layout_margin="2dp"
     android:background="@color/transparent"
-    android:orientation="vertical"
+    android:layout_margin="2dp"
+     android:orientation="vertical"
     android:padding="2dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -21,7 +21,7 @@
         android:layout_gravity="center"
         android:padding="2dp"
         android:text="brand"
-        android:textColor="@color/black"
+        android:textColor="?attr/textcolor"
         android:textSize="18sp" />
 
 </LinearLayout>
