--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,35 +3,36 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="android:statusBarColor">@color/white</item>
-        <item name="windowActionBar">false</item>
-        <item name="android:titleTextColor">@color/colorPrimaryDark</item>
-        <item name="android:textColorHighlight">@color/colorPrimaryDark</item>
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:editTextStyle">@style/RobotoEditText</item>
-        <item name="android:fontFamily">@font/roboto_regular</item>
-        <item name="android:windowLightStatusBar">true</item>
-    </style>
 
-    <style name="AppTheme.Night" parent="Theme.AppCompat.NoActionBar">
-        <!-- Customize your theme here. -->
-        <item name="android:statusBarColor">@color/black</item>
-        <item name="windowActionBar">false</item>
-        <item name="android:titleTextColor">@color/colorPrimary</item>
+        <item name="android:statusBarColor">@color/grey_200</item>
+        <item name="titlecolor">@color/colorPrimary</item>
+        <item name="textcolor">@color/black</item>
+        <item name="hintcolor">@color/grey_400</item>
+        <item name="backgroundcolor">@color/white</item>
         <item name="android:textColorHighlight">@color/colorPrimary</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:editTextStyle">@style/RobotoEditText</item>
-        <item name="android:fontFamily">@font/roboto_regular</item>
     </style>
-    <style name="RobotoEditText" parent="android:Widget.EditText">
-        <item name="android:fontFamily">@font/roboto_regular</item>
-        <item name="android:textColorHint">@color/grey_300</item>
-        <item name="android:textColor">@color/black</item>
+
+
+
+    <style name="AppTheme.Night" parent="Theme.AppCompat.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="hintcolor">@color/grey_700</item>
+
+          <item name="android:statusBarColor">@color/grey_900</item>
+        <item name="titlecolor">#BA68C8</item>
+        <item name="textcolor">@color/white</item>
+         <item name="backgroundcolor">@color/grey_800</item>
+         <item name="android:textColorHighlight">@color/colorPrimary</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
     </style>
+
+
+
     <style name="Dialog_No_Border">
             <item name="android:windowIsFloating">true</item>
             <item name="android:windowBackground">@color/transparent</item>
