--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,34 +1,18 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportHeight="108"
-    android:viewportWidth="108">
-    <path
-        android:fillType="evenOdd"
-        android:pathData="M32,64C32,64 38.39,52.99 44.13,50.95C51.37,48.37 70.14,49.57 70.14,49.57L108.26,87.69L108,109.01L75.97,107.97L32,64Z"
-        android:strokeColor="#00000000"
-        android:strokeWidth="1">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="78.5885"
-                android:endY="90.9159"
-                android:startX="48.7653"
-                android:startY="61.0927"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M66.94,46.02L66.94,46.02C72.44,50.07 76,56.61 76,64L32,64C32,56.61 35.56,50.11 40.98,46.06L36.18,41.19C35.45,40.45 35.45,39.3 36.18,38.56C36.91,37.81 38.05,37.81 38.78,38.56L44.25,44.05C47.18,42.57 50.48,41.71 54,41.71C57.48,41.71 60.78,42.57 63.68,44.05L69.11,38.56C69.84,37.81 70.98,37.81 71.71,38.56C72.44,39.3 72.44,40.45 71.71,41.19L66.94,46.02ZM62.94,56.92C64.08,56.92 65,56.01 65,54.88C65,53.76 64.08,52.85 62.94,52.85C61.8,52.85 60.88,53.76 60.88,54.88C60.88,56.01 61.8,56.92 62.94,56.92ZM45.06,56.92C46.2,56.92 47.13,56.01 47.13,54.88C47.13,53.76 46.2,52.85 45.06,52.85C43.92,52.85 43,53.76 43,54.88C43,56.01 43.92,56.92 45.06,56.92Z"
-        android:strokeColor="#00000000"
-        android:strokeWidth="1" />
+    android:viewportWidth="1374.3911"
+    android:viewportHeight="1374.3936">
+    <group android:translateX="393.22858"
+        android:translateY="393.22925">
+        <path
+            android:pathData="M388.427,151.281m-54.879,0a54.879,54.879 0,1 1,109.758 0a54.879,54.879 0,1 1,-109.758 0"
+            android:fillColor="#FFFFFF"/>
+        <path
+            android:pathData="M97.565,293.121m-27.444,0a27.444,27.444 0,1 1,54.888 0a27.444,27.444 0,1 1,-54.888 0"
+            android:fillColor="#FFFFFF"/>
+        <path
+            android:pathData="M49.6,474.847c36.796,0 92.632,-9.524 146.507,-21.907c24.997,23.858 58.781,38.594 96.065,38.594c68.821,0 125.842,-49.954 137.135,-115.554c96.333,-39.598 170.433,-81.08 157.064,-123.872c-0.086,-0.287 -0.191,-0.574 -0.307,-0.851c-4.504,-10.892 -18.321,-15.75 -44.8,-15.759c-46.828,0 -119.876,15.176 -122.965,15.816c-5.039,1.052 -8.481,5.719 -8.013,10.844s4.704,9.084 9.85,9.208c32.378,0.765 60.329,7.774 63.686,13.455c-3.251,7.411 -25.618,20.99 -56.046,35.955c-14.276,-61.764 -69.51,-107.865 -135.615,-107.865c-76.939,0 -139.306,62.367 -139.306,139.306c0,20.942 4.752,40.727 13.024,58.542c-15.348,2.888 -29.567,4.724 -41.081,4.724c-10.806,0 -16.352,-1.616 -19.077,-2.936c0.717,-3.299 5.489,-14.735 36.452,-36.232c2.792,-1.807 4.647,-4.953 4.647,-8.52c0,-5.518 -4.389,-10.146 -9.869,-10.146c-0.095,0 -0.191,0 -0.277,0c-0.334,0 -0.66,0.029 -0.994,0.067c-0.555,0.058 -1.1,0.162 -1.635,0.306c-11.561,2.831 -103.533,26.46 -127.841,66.861c-5.938,9.868 -7.621,20.062 -5.02,30.304C5.679,472.81 30.972,474.847 49.6,474.847z"
+            android:fillColor="#FFFFFF"/>
+    </group>
 </vector>
