--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -128,7 +128,7 @@
 
     <RelativeLayout
         android:visibility="gone"
-         android:id="@+id/loading"
+          android:id="@+id/loading"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
@@ -139,17 +139,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
         <TextView
+            android:padding="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
              android:fontFamily="@font/roboto_regular"
+            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
             android:text="Fuçando nas suas coisas"
             android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textSize="24sp" />
+            android:textStyle="bold"
+             android:textSize="24sp" />
         <ImageView
+            android:src="@drawable/ic_choices_monochrome"
             android:id="@+id/offlineimage"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_width="150dp"
+            android:layout_height="150dp" />
         </LinearLayout>
 
 
