--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -82,20 +82,25 @@
         android:layout_height="match_parent"
         />
     <LinearLayout
+        android:layout_margin="50dp"
+        android:layout_gravity="center"
         android:id="@+id/empty"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
         <ImageView
-            android:tint="?attr/textcolor"
-            android:id="@+id/icon"
-            android:layout_width="150dp"
+             android:tint="?attr/textcolor"
+             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:layout_gravity="center"
-            android:contentDescription="@string/empty_search"
+             android:contentDescription="@string/empty_search"
             android:adjustViewBounds="true"
             android:padding="20dp"
             android:scaleType="fitCenter"
-            android:src="@drawable/ic_start_up" />
+            android:src="@drawable/ic_a_ok_monochrome" />
+        <TextView
+            android:textStyle="bold"
+            android:text="Faça aquela pesquisa top!"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </LinearLayout>
