--- a/app/src/main/res/layout/politics.xml
+++ b/app/src/main/res/layout/politics.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.AlertDialogLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="5dp"
+    android:layout_margin="1dp"
+    app:cardBackgroundColor="?attr/backgroundcolor"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/backgroundcolor">
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -72,9 +76,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:background="@drawable/button"
+                android:background="@drawable/ripple_button"
                 android:backgroundTint="@color/blue_300"
-                android:padding="5dp"
+                android:padding="15dp"
                 android:text="Li e concordo com os termos de uso e privacidade "
                 android:textColor="@color/white"
                 android:textSize="12sp" />
@@ -83,4 +87,4 @@
     </android.support.v4.widget.NestedScrollView>
 
 
-</android.support.v7.widget.AlertDialogLayout>
+</android.support.v7.widget.CardView>
