--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,10 +17,10 @@
         <android.support.v7.widget.Toolbar
             style="@style/AppTheme"
             android:id="@+id/toolbar"
-            app:titleTextColor="?attr/titlecolor"
+            android:background="@drawable/actionbarbackground"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:elevation="3dp"
+            android:elevation="0dp"
              app:title="@string/app_name" />
 
         <android.support.v7.widget.CardView
@@ -48,6 +48,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:visibility="gone"
         android:gravity="center"
         android:layout_centerInParent="true"
          android:orientation="vertical"
