--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -2,6 +2,7 @@
 <resources>
     <declare-styleable name="ds">
          <attr name="backgroundcolor" format="color" />
+        <attr name="actionbarcolor" format="color" />
         <attr name="textcolor" format="color" />
         <attr name="hintcolor" format="color" />
         <attr name="titlecolor" format="color" />
