--- a/app/src/main/res/menu/mainmenu.xml
+++ b/app/src/main/res/menu/mainmenu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/theme"
         android:title="@string/tema_escuro"
@@ -10,5 +11,10 @@
         android:icon="@drawable/ic_exit_to_app_black_24dp" />
 
 
-
+    <item
+        android:id="@+id/action_search"
+        android:icon="@drawable/ic_search_black_24dp"
+        android:title="Search"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:showAsAction="ifRoom|collapseActionView" />
 </menu>
