--- a/app/src/main/res/layout/fonts.xml
+++ b/app/src/main/res/layout/fonts.xml
@@ -1,21 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    android:id="@+id/layout"
-     android:elevation="10dp"
-    app:cardCornerRadius="5dp"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="?attr/backgroundcolor"
-    android:foreground="?attr/selectableItemBackground"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <LinearLayout
-         android:padding="2dp"
-        android:layout_margin="10dp"
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_margin="1dp"
+        android:background="@drawable/bottom_line"
+        android:padding="2dp"
          android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <TextView
+            android:padding="5dp"
             style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
             android:textAlignment="center"
              android:textColor="?attr/textcolor"
@@ -28,4 +21,3 @@
 
     </LinearLayout>
 
-</android.support.v7.widget.CardView>
