--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -38,8 +38,6 @@
                     android:layout_gravity="center">
 
                     <de.hdodenhof.circleimageview.CircleImageView
-                        app:civ_border_color="@color/white"
-                        app:civ_border_width="1dp"
                         android:padding="15dp"
                         android:id="@+id/profilepic"
                         android:layout_width="200dp"
@@ -50,8 +48,10 @@
                         android:id="@+id/camerafab"
                         android:layout_width="25dp"
                         android:layout_height="25dp"
-                        android:layout_alignParentBottom="true"
                         android:layout_alignParentStart="true"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginStart="24dp"
+                        android:layout_marginBottom="8dp"
                         android:src="@drawable/ic_photo_camera_black_24dp"
                         android:tint="@color/colorPrimaryDark"
                         app:fab_colorNormal="@color/white"
@@ -139,6 +139,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
         <TextView
+            android:textColor="@color/grey_700"
             android:padding="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
