--- a/app/src/main/res/layout/newquotepopup.xml
+++ b/app/src/main/res/layout/newquotepopup.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_margin="4dp"
     app:cardCornerRadius="10dp"
-     android:layout_height="wrap_content"
-     android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <!-- TODO: Update blank fragment layout -->
         <LinearLayout
@@ -94,6 +93,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content">
                                 <Spinner
+
                                     android:foreground="?attr/selectableItemBackground"
                                     android:foregroundTint="?attr/backgroundcolor"
                                       android:elevation="0dp"
@@ -157,7 +157,7 @@
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:text="@string/username"
-                                        android:textColor="@color/black"
+                                        android:textColor="?attr/textcolor"
                                         android:textSize="14sp" />
 
 
