--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,6 +4,7 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
            <item name="titlecolor">@color/colorPrimary</item>
+        <item name="dialogbackcolor">@color/white</item>
         <item name="actionbarcolor">@color/white</item>
         <item name="textcolor">@color/black</item>
         <item name="hintcolor">@color/grey_300</item>
@@ -20,6 +21,8 @@
     <style name="AppTheme.Night" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="android:statusBarColor">@color/grey_900</item>
+        <item name="dialogbackcolor">@color/grey_800</item>
+
         <item name="actionbarcolor">@color/grey_900</item>
         <item name="hintcolor">@color/grey_600</item>
          <item name="titlecolor">#BA68C8</item>
