--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,7 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:elevation="0dp"
-             app:title="@string/app_name" />
+            app:title="@string/app_name"></android.support.v7.widget.Toolbar>
 
         <android.support.v7.widget.CardView
             android:layout_width="wrap_content"
