--- a/app/src/main/res/layout/quotescard.xml
+++ b/app/src/main/res/layout/quotescard.xml
@@ -118,7 +118,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
-                    android:textColor="?attr/textcolor"
+                    android:textColor="@color/black"
                     android:button="@drawable/favoritecheck"
                     android:padding="5dp" />
                 <ImageButton
