--- a/app/src/main/res/drawable/ic_add_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_add_black_24dp.xml
@@ -2,6 +2,6 @@
     android:viewportHeight="24.0" android:viewportWidth="24.0"
     android:width="34dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path
-        android:fillColor="@color/colorPrimary"
+        android:fillColor="@color/white"
         android:pathData="M19,13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
 </vector>
