--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,13 +15,75 @@
         android:orientation="vertical">
 
         <android.support.v7.widget.Toolbar
+            android:animateLayoutChanges="true"
             style="@style/AppTheme"
             android:id="@+id/toolbar"
             android:background="@drawable/actionbarbackground"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:elevation="0dp"
-            app:title="@string/app_name"></android.support.v7.widget.Toolbar>
+            app:title="@string/app_name">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:animateLayoutChanges="true"
+                android:orientation="vertical">
+
+                <android.support.v7.widget.SearchView
+                    android:id="@+id/search"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="?attr/hintcolor"
+                    app:defaultQueryHint="Busque o que seu coração quiser..."
+                    app:iconifiedByDefault="true"
+                    app:queryBackground="@color/transparent"
+                    app:submitBackground="@color/transparent" />
+
+                <android.support.design.widget.TabLayout
+                    android:id="@+id/searchoptions"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    app:tabIndicatorColor="?attr/textcolor"
+                    app:tabIndicatorHeight="1dp"
+                    app:tabMode="scrollable"
+                    app:tabTextColor="?attr/hintcolor">
+
+                    <android.support.design.widget.TabItem
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:icon="@drawable/ic_author_sign" />
+
+                    <android.support.design.widget.TabItem
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:icon="@drawable/ic_person_black_24dp" />
+
+                    <android.support.design.widget.TabItem
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:icon="@drawable/ic_favorite2_black_24dp" />
+
+                    <android.support.design.widget.TabItem
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:icon="@drawable/ic_bookmark_black_15dp" />
+
+                    <android.support.design.widget.TabItem
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:icon="@drawable/ic_music_note_black_24dp" />
+
+                    <android.support.design.widget.TabItem
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:icon="@drawable/ic_filter_vintage_black_24dp" />
+
+                </android.support.design.widget.TabLayout>
+            </LinearLayout>
+        </android.support.v7.widget.Toolbar>
 
         <android.support.v7.widget.CardView
             android:layout_width="wrap_content"
