--- a/app/src/main/res/layout/profilepicselect_.xml
+++ b/app/src/main/res/layout/profilepicselect_.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/transparent"
     android:orientation="vertical">
 
     <LinearLayout
-        android:background="?attr/backgroundcolor"
+        android:background="@color/transparent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -29,51 +29,46 @@
         android:textColor="@color/black"
         android:visibility="gone" />
 
-        <android.support.v7.widget.CardView
+        <LinearLayout
             android:id="@+id/back"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            app:cardCornerRadius="15dp">
+            android:elevation="0dp"
+            android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="2dp"
-                    android:backgroundTint="@color/black"
-                    android:padding="5dp"
-                    android:text="Selecione um ícone de perfil"
-                    android:textSize="22sp"
-                    android:textStyle="bold" />
+                android:layout_margin="2dp"
+                android:backgroundTint="@color/black"
+                android:padding="5dp"
+                android:text="Selecione um ícone de perfil"
+                android:textColor="?attr/textcolor"
+                android:textSize="22sp"
+                android:textStyle="bold" />
 
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/picsrecycler"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="5dp"
-                    android:nestedScrollingEnabled="false" />
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/picsrecycler"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="5dp"
+                android:nestedScrollingEnabled="false" />
 
-                <Button
-                    android:id="@+id/removepic"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/button"
-                    android:backgroundTint="@color/black"
-                    android:text="@string/remover_foto_de_perfil"
-                    android:textColor="@color/white"
-                    android:textSize="12sp" />
-            </LinearLayout>
+            <Button
+                android:id="@+id/removepic"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/ripple_button"
+                android:backgroundTint="@color/red_500"
+                android:text="@string/remover_foto_de_perfil"
+                android:textColor="@color/white"
+                android:textSize="12sp" />
 
-        </android.support.v7.widget.CardView>
+        </LinearLayout>
     </LinearLayout>
 
 
