--- a/app/src/main/res/layout/references.xml
+++ b/app/src/main/res/layout/references.xml
@@ -1,20 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="100dp"
+    android:layout_height="100dp"
     android:layout_gravity="center"
     android:background="@color/transparent"
     android:layout_margin="2dp"
-     android:orientation="vertical"
+    android:orientation="vertical"
     android:padding="2dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="match_parent"
         android:id="@+id/brand"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_height="match_parent"
+        android:src="@drawable/penguin"
         android:layout_gravity="center" />
 
+    <com.github.mmin18.widget.RealtimeBlurView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:realtimeBlurRadius="10dp"
+        app:realtimeOverlayColor="@color/lwhite" />
     <TextView
+        android:layout_centerInParent="true"
         android:id="@+id/brandtext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -24,4 +32,4 @@
         android:textColor="?attr/textcolor"
         android:textSize="18sp" />
 
-</LinearLayout>
+</RelativeLayout>
