--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -3,7 +3,7 @@
     <declare-styleable name="ds">
          <attr name="backgroundcolor" format="color" />
         <attr name="dialogbackcolor" format="color" />
-
+        <attr name="overlaycolor" format="color" />
         <attr name="actionbarcolor" format="color" />
         <attr name="textcolor" format="color" />
         <attr name="hintcolor" format="color" />
